--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: block;
     align-items: center;
     justify-content: center;
-    background: url(/images/bg.jpg) bottom no-repeat;
+    background: url(images/bg.jpg) bottom no-repeat;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
